--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -1,17 +1,24 @@
-.Category{
-    display: flex;
-    /* padding: 20px; */
-    margin-right: 40px;
-    
+.category_container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 80px;
+    grid-gap: 20px;
+    margin-bottom: 20px;
 }
-
-.Category div{
-    border: solid 2px;
-    border-radius: 8px;
-    margin: 5px;
-    padding: 5px;
+.categories{
+    /* background-color: brown; */
     text-align: center;
-    font-weight: 900;
+    margin-top: 25px;
+    border-radius: 5px;
     font-size: 30px;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    letter-spacing: 1px;
+    transition: 0.4s;
+    cursor: pointer;
+    border: 1px solid black;
 }
-
+.categories:hover{
+    background-color: rgb(117, 178, 239);
+    color: white;
+}
