--- a/src/components/Shuffle/Shuffle.module.css
+++ b/src/components/Shuffle/Shuffle.module.css
@@ -1,7 +1,23 @@
-.button{
-    padding: 30px;
+.shffle_container{
+    /* background-color: chartreuse; */
+    margin-top: 20px;
+}
+.shuffle_button{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 0;
+    width: 200px;
+    padding: 5px;
+    border: none;
+    background-color: yellow;
+    border-radius: 5px;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    letter-spacing: 2px;
+    font-size: 18px;
+    transition: 0.4s;
 }
 
-.button button{
-    font-weight: 700;
+.shuffle_button:hover{
+    background-color: rgb(117, 178, 239);
 }
